--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "express": "^4.17.1",
     "nodemon": "^1.19.4",
     "socket.io": "^2.3.0",
-    "socketio-file-upload": "^0.7.0"
+    "socketio-file-upload": "^0.7.0",
+    "uuid": "^3.3.3",
+    "ws": "^7.2.0"
   }
 }
